added lesson edit activity